# formidable

./: Cargo.toml  README.md  test_attributes.rs
formidable/: Cargo.toml
formidable-derive/: Cargo.toml
formidable-derive/src/: lib.rs
formidable-example/: Cargo.toml  README.md  build.rs
formidable-example/locales/: de.json  en.json
formidable-example/src/: app.rs  main.rs
formidable-example/src/app/: form.rs
formidable-example/style/: main.scss
formidable-receipts/: Cargo.toml
formidable-receipts/src/: lib.rs  rendering.rs
formidable-receipts/src/rendering/: typst_wrapper.rs
formidable/src/: components.rs  error.rs  lib.rs  name.rs  types.rs
formidable/src/components/: checkbox.rs  description.rs  error_message.rs  file_input.rs  input.rs  paginated_section.rs  radio.rs  section.rs  section_heading_view.rs  select.rs
formidable/src/types/: accept.rs  bigdecimal.rs  client_metadata.rs  color.rs  email.rs  file.rs  non_empty_string.rs  option.rs  optional.rs  pattern.rs  std_types.rs  tel.rs  time.rs  url.rs
