[package]
name = "formidable-derive"
version = "0.1.0"
edition = "2021"
description = "Easily derive forms from structs for Leptos."
keywords = ["leptos", "form", "derive"]
authors = ["Fabian Bösiger <fabian.boesiger@outlook.com>"]
repository = "https://github.com/fabianboesiger/formidable"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
syn = {version = "2.0", features = ["full"]}
quote = "1.0"
proc-macro2 = "1.0"

[features]
leptos_i18n = []
