[package]
name = "formidable"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { workspace = true }
formidable-derive = { path = "../formidable-derive" }
thiserror = "2.0"
derive_more = { version = "2.0", features = ["display", "into", "deref"] }
strum = { version = "0.27" }
uuid = { version = "1.3", features = ["v4", "js"] }
bigdecimal = { version = "0.4", optional = true }
time = { version = "0.3", optional = true, features = ["formatting", "parsing", "macros", "local-offset", "wasm-bindgen"] }
color = { version = "0.3", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
url = { version = "2.4", optional = true }
web-sys = { version = "0.3", features = ["File", "FileList"] }
wasm-bindgen-futures = { version = "0.4", optional = true }
deranged ={ version = "0.5", optional = true }
bounded-vec = { version = "0.9", optional = true }

[features]
serde = ["dep:serde", "bigdecimal/serde", "time/serde", "color/serde", "url/serde"]
bigdecimal = ["dep:bigdecimal"]
time = ["dep:time"]
color = ["dep:color"]
url = ["dep:url"]
file = ["dep:wasm-bindgen-futures", "web-sys/File", "web-sys/FileList"]
deranged = ["dep:deranged"]
bounded-vec = ["dep:bounded-vec"]
leptos_i18n = ["formidable-derive/leptos_i18n"]
